Added solution for task 2

--- a/index.html
+++ b/index.html
@@ -8,10 +8,20 @@
 </head>
 <body>
   <h1>Homework</h1>
-  <h2>Task 1</h2>
+  <div>
+    <div>Task 1</div>
+    <button onclick="showName()" id="task_1-results">Check results</button>
+  </div>
+  <div>
+    <div>Task 2</div>
+    <button id="task_2-results">Check results</button>
+  </div>
   <script>
-    alert("Inna Shpachynska"); // task_1 point 1
+    function showName() {
+      alert("Inna Shpachynska"); // task_1 point 1
+    }
   </script>
   <script src="js/task_1.js"></script>
+  <script src="js/task_2.js"></script>
 </body>
 </html>
