Added solution for task 3

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     <div>Task 2</div>
     <button id="task_2-results">Check results</button>
   </div>
+  <div>
+    <div>Task 3</div>
+    <button id="task_3-results">Check results</button>
+  </div>
   <script>
     function showName() {
       alert("Inna Shpachynska"); // task_1 point 1
@@ -23,5 +27,6 @@
   </script>
   <script src="js/task_1.js"></script>
   <script src="js/task_2.js"></script>
+  <script src="js/task_3.js"></script>
 </body>
 </html>
