Added solution for task 4 point 1

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
     <div>Task 3</div>
     <button id="task_3-results">Check results</button>
   </div>
+  <div>
+    <div>Task 4</div>
+    <button id="task_4-results">Check results</button>
+  </div>
   <script>
     function showName() {
       alert("Inna Shpachynska"); // task_1 point 1
@@ -28,5 +32,6 @@
   <script src="js/task_1.js"></script>
   <script src="js/task_2.js"></script>
   <script src="js/task_3.js"></script>
+  <script src="js/task_4.js"></script>
 </body>
 </html>
