Added solution for task 5

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
     <div>Task 4</div>
     <button id="task_4-results">Check results</button>
   </div>
+  <div>
+    <div>Task 5</div>
+    <button id="task_5-results">Check results</button>
+  </div>
   <script>
     function showName() {
       alert("Inna Shpachynska"); // task_1 point 1
@@ -33,5 +37,6 @@
   <script src="js/task_2.js"></script>
   <script src="js/task_3.js"></script>
   <script src="js/task_4.js"></script>
+  <script src="js/task_5.js"></script>
 </body>
 </html>
