Added solution for task 2 homework 6

--- a/homework-6/task-1/task-1.html
+++ b/homework-6/task-1/task-1.html
@@ -13,7 +13,8 @@
     <li>4</li>
     <li>5</li>
   </ul>
-
-  <script src="js/task_6.js"></script>
+  <div><a href="../homework-6.html">Go back</a></div>
+  
+  <script src="task-1.js"></script>
 </body>
 </html>
