--- a/homework-6/homework-6.html
+++ b/homework-6/homework-6.html
@@ -10,8 +10,8 @@
   <ul>
     <li><a href="./task-1/task-1.html">Go to the task 1</a></li>
     <li><a href="./task-2/task-2.html">Go to the task 2</a></li>
-    <li><a href="">Go to the task 3</a></li>
-    <li><a href="">Go to the task 4</a></li>
+    <li><a href="./task-3/task-3.html">Go to the task 3</a></li>
+    <li><a href="./task-4/task-4.html">Go to the task 4</a></li>
     <li><a href="">Go to the task 5</a></li>
     <li><a href="">Go to the task 6</a></li>
     <li><a href="">Go to the task 7</a></li>
