--- a/homework-6/homework-6.html
+++ b/homework-6/homework-6.html
@@ -12,8 +12,8 @@
     <li><a href="./task-2/task-2.html">Go to the task 2</a></li>
     <li><a href="./task-3/task-3.html">Go to the task 3</a></li>
     <li><a href="./task-4/task-4.html">Go to the task 4</a></li>
-    <li><a href="">Go to the task 5</a></li>
-    <li><a href="">Go to the task 6</a></li>
+    <li><a href="./task-5/task-5.html">Go to the task 5</a></li>
+    <li><a href="./task-6/task-6.html">Go to the task 6</a></li>
     <li><a href="">Go to the task 7</a></li>
   </ul>
 </body>
