--- a/homework-7/homework_7.html
+++ b/homework-7/homework_7.html
@@ -14,7 +14,7 @@
     <li><a href="./task-4/task_4.html">Go to the task 4</a></li>
     <li><a href="./task-5/task_5.html">Go to the task 5</a></li>
     <li><a href="./task-6/task_6.html">Go to the task 6</a></li>
-    <li><a href="">Go to the task 7</a></li>
+    <li><a href="./task-7/task_7.html">Go to the task 7</a></li>
   </ul>
 </body>
 </html>
